@@ -4,6 +4,9 @@ Changes
 1.1.5 (TBD)
 ------------------
 
+- Members of the Resampling enum with a value > 7 can only be used in warp
+  operations (#1930). We now raise a ResamplingAlgorithmError if they are used
+  with non-warp read and writes.
 - To help users of poetry, the conditional requirements in setup.py have been
   changed to use PEP 496 environment markers exclusively (#1777).
 
